--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
               <div class="item">
                 <div class="ts-team-wrapper">
                   <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/ibrahim-tarik-sen-insaat-muhendisi-mecra-proje.png.png" alt="team-img">
+                    <img loading="lazy" class="w-100" src="images/team/ibrahim-tarik-sen-insaat-muhendisi-mecra-proje.png" alt="team-img">
                   </div>
                   <div class="ts-team-content">
                     <h3 class="ts-name">İbrahim Tarık Şen</h3>
@@ -189,7 +189,7 @@
               <div class="item">
                 <div class="ts-team-wrapper">
                   <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/mustafa-abay-elektrik-elektronik-muhendisi-mecra-proje.png.png" alt="team-img">
+                    <img loading="lazy" class="w-100" src="images/team/mustafa-abay-elektrik-elektronik-muhendisi-mecra-proje.png" alt="team-img">
                   </div>
                   <div class="ts-team-content">
                     <h3 class="ts-name">Mustafa Abay</h3>
