--- a/team.html
+++ b/team.html
@@ -125,12 +125,11 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Our Team</h1>
+                <h1 class="banner-title">Ekibimiz</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">company</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Our Team</li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Takımımız</li>
                   </ol>
                 </nav>
               </div>
@@ -143,23 +142,21 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <h3 class="section-sub-title">Our Leaderships</h3>
+            <h2 class="section-title">Kaliteli Hizmet</h2>
+            <h3 class="section-sub-title">Profesyonel Ekip</h3>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-3 col-sm-6 mb-5">
             <div class="ts-team-wrapper">
               <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team1.jpg" class="img-fluid" alt="team-img">
+                <img loading="lazy" src="images/team/mehmet-sahin-mimar-mecra-proje.png" class="img-fluid" alt="team-img">
               </div>
               <div class="ts-team-content-classic">
-                <h3 class="ts-name">Nats Stenman</h3>
-                <p class="ts-designation">Chief Operating Officer</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
+                <h3 class="ts-name">MEHMET ŞAHİN</h3>
+                <p class="ts-designation">Mimar</p>
                 <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                  <a target="_blank" href="https://tr.linkedin.com/in/mehmetsahinmimar"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -167,36 +164,49 @@
           <div class="col-lg-3 col-sm-6 mb-5">
             <div class="ts-team-wrapper">
               <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team2.jpg" class="img-fluid" alt="team-img">
+                <img loading="lazy" src="images/team/ibrahim-tarik-sen-insaat-muhendisi-mecra-proje.png" class="img-fluid" alt="team-img">
               </div>
               <div class="ts-team-content-classic">
-                <h3 class="ts-name">ANGELA LYOUER</h3>
-                <p class="ts-designation">Innovation Officer</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
+                <h3 class="ts-name">İBRAHİM TARIK ŞEN</h3>
+                <p class="ts-designation">İnşaat Mühendisi</p>
                 <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                  <a target="_blank" href="https://tr.linkedin.com/in/ibrahim-tar%C4%B1k-%C5%9Fen-43a9621bb"><i class="fab fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6 mb-5">
+            <div class="ts-team-wrapper">
+              <div class="team-img-wrapper">
+                <img loading="lazy" src="images/team/mustafa-abay-elektrik-elektronik-muhendisi-mecra-proje.png" class="img-fluid" alt="team-img">
+              </div>
+              <div class="ts-team-content-classic">
+                <h3 class="ts-name">MUSTAFA ABAY</h3>
+                <p class="ts-designation">Elektrik Elektronik Mühendisi</p>
+                <div class="team-social-icons">
+                  <a target="_blank" href="https://tr.linkedin.com/in/mustafa-abay-0258b7194"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-center">
+          <div class="col-lg-12">
+            <h2 class="section-title">Kaliteli Hizmet</h2>
+            <h3 class="section-sub-title">Yardımcı Teknik Ekip</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
           <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
             <div class="ts-team-wrapper">
               <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team3.jpg" class="img-fluid" alt="team-img">
+                <img loading="lazy" src="images/team/samed-erkam-sen-mimar-mecra-proje.png" class="img-fluid" alt="team-img">
               </div>
               <div class="ts-team-content-classic">
-                <h3 class="ts-name">Mark Conter</h3>
-                <p class="ts-designation">Safety Officer</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
+                <h3 class="ts-name">SAMED EKRAM ŞEN</h3>
+                <p class="ts-designation">Mimar</p>
                 <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                  <a target="_blank" href="https://tr.linkedin.com/in/samederkam"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -204,51 +214,13 @@
           <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
             <div class="ts-team-wrapper">
               <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team4.jpg" class="img-fluid" alt="team-img">
+                <img loading="lazy" src="images/team/muhammed-ikbal-ozkan-mimar-insaat-muhendisi-mecra-proje.png" class="img-fluid" alt="team-img">
               </div>
               <div class="ts-team-content-classic">
-                <h3 class="ts-name">AYESHA STEWART</h3>
-                <p class="ts-designation">Finance Officer</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
+                <h3 class="ts-name">MUHAMMET İKBAL ÖZKAN</h3>
+                <p class="ts-designation">İnşaat Mühendisi / Mimar</p>
                 <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
-            <div class="ts-team-wrapper">
-              <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team5.jpg" class="img-fluid" alt="team-img">
-              </div>
-              <div class="ts-team-content-classic">
-                <h3 class="ts-name">Dave Clarkte</h3>
-                <p class="ts-designation">Civil Engineer</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
-                <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 mb-5">
-            <div class="ts-team-wrapper">
-              <div class="team-img-wrapper">
-                <img loading="lazy" src="images/team/team6.jpg" class="img-fluid" alt="team-img">
-              </div>
-              <div class="ts-team-content-classic">
-                <h3 class="ts-name">Elton Joe</h3>
-                <p class="ts-designation">Site Supervisor</p>
-                <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
-                <div class="team-social-icons">
-                  <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                  <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
+                  <a target="_blank" href="https://tr.linkedin.com/in/muhammet-ikbal-%C3%B6zkan-928b11162"><i class="fab fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
