--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
                 <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">0</span></h2>
-                <h3 class="ts-facts-title">Total Projects</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">25</span></h2>
+                <h3 class="ts-facts-title">Adet Proje</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-sm-0">
@@ -325,8 +325,8 @@
                 <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="647">0</span></h2>
-                <h3 class="ts-facts-title">Staff Members</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="647">5</span></h2>
+                <h3 class="ts-facts-title">Profesyonel Ekip</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
@@ -334,8 +334,8 @@
                 <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="4000">0</span></h2>
-                <h3 class="ts-facts-title">Hours of Work</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="4000">25</span></h2>
+                <h3 class="ts-facts-title">Çözüm Ortağı</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
@@ -343,8 +343,8 @@
                 <img loading="lazy" src="images/icon-image/fact4.png" alt="facts-img">
               </div>
               <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="44">0</span></h2>
-                <h3 class="ts-facts-title">Countries Experience</h3>
+                <h2 class="ts-facts-num"><span class="counterUp" data-count="44">11</span></h2>
+                <h3 class="ts-facts-title">Ülkeye Hizmet</h3>
               </div>
             </div>
           </div>
