--- a/contact.html
+++ b/contact.html
@@ -95,8 +95,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a href="index.html" class="nav-link">Anasayfa</a>
+                    <li class="nav-item active">
+                      <a href="index.html" class="nav-link active">Anasayfa</a>
                     </li>
                     <li class="nav-item">
                       <a href="about.html" class="nav-link">Hakkımızda</a>
@@ -107,10 +107,7 @@
                     <li class="nav-item">
                       <a href="projects.html" class="nav-link">Projelerimiz</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
-                    </li>
-                    <li class="nav-item active"><a class="nav-link active" href="contact.html">İletişim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
