--- a/index.html
+++ b/index.html
@@ -348,209 +348,74 @@
         </div>
       </div>
     </section>
-    <section id="ts-service-area" class="ts-service-area pb-0">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-12">
-            <h2 class="section-title">We Are Specialists In</h2>
-            <h3 class="section-sub-title">What We Do</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Home Construction</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Building Remodels</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Interior Design</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 text-center">
-            <img loading="lazy" class="img-fluid" src="images/services/service-center.jpg" alt="service-avater-image">
-          </div>
-          <div class="col-lg-4 mt-5 mt-lg-0 mb-4 mb-lg-0">
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon4.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Exterior Design</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon5.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Renovation</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-            <div class="ts-service-box d-flex">
-              <div class="ts-service-box-img">
-                <img loading="lazy" src="images/icon-image/service-icon6.png" alt="service-icon">
-              </div>
-              <div class="ts-service-box-info">
-                <h3 class="service-box-title"><a href="#">Safety Management</a></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit Integer adipiscing erat</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <section id="project-area" class="project-area solid-bg">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
             <h2 class="section-title">Work of Excellence</h2>
-            <h3 class="section-sub-title">Recent Projects</h3>
+            <h3 class="section-sub-title">Projelerimiz</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-12">
-            <div class="shuffle-btn-group">
-              <label class="active" for="all">
-                <input type="radio" name="shuffle-filter" id="all" value="all" checked="checked">Show All
-              </label>
-              <label for="commercial">
-                <input type="radio" name="shuffle-filter" id="commercial" value="commercial">Commercial
-              </label>
-              <label for="education">
-                <input type="radio" name="shuffle-filter" id="education" value="education">Education
-              </label>
-              <label for="government">
-                <input type="radio" name="shuffle-filter" id="government" value="government">Government
-              </label>
-              <label for="infrastructure">
-                <input type="radio" name="shuffle-filter" id="infrastructure" value="infrastructure">Infrastructure
-              </label>
-              <label for="residential">
-                <input type="radio" name="shuffle-filter" id="residential" value="residential">Residential
-              </label>
-              <label for="healthcare">
-                <input type="radio" name="shuffle-filter" id="healthcare" value="healthcare">Healthcare
-              </label>
-            </div>
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups="[&quot;government&quot;,&quot;healthcare&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project1.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project1.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/altinekin-katli-evler/altinekin-evler-tasarim-mecra-proje-4.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/altinekin-katli-evler/altinekin-evler-tasarim-mecra-proje-4.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Capital Teltway Building</a>
+                        <a href="projects-single.html">İ.A. Müstakil Konut Projesi</a>
                       </h3>
-                      <p class="project-cat">Commercial, Interiors</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups="[&quot;healthcare&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project2.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project2.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/altinekin-mustakil-evler/altinekin-evler-tasarim-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/altinekin-mustakil-evler/altinekin-evler-tasarim-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Ghum Touch Hospital</a>
+                        <a href="projects-single.html">H.A. Mustakil Ev Projesi</a>
                       </h3>
-                      <p class="project-cat">Healthcare</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item"
-                data-groups="[&quot;infrastructure&quot;,&quot;commercial&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project3.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project3.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-3.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-3.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">TNT East Facility</a>
+                        <a href="projects-single.html">M.B. Bağevi Projesi</a>
                       </h3>
-                      <p class="project-cat">Government</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item"
-                data-groups="[&quot;education&quot;,&quot;infrastructure&quot;]">
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project4.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project4.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-4.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-4.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Narriot Headquarters</a>
+                        <a href="projects-single.html">Mikronet Karbon İç Mekan Tasarımı Projesi</a>
                       </h3>
-                      <p class="project-cat">Infrastructure</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item"
-                data-groups="[&quot;infrastructure&quot;,&quot;education&quot;]">
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project5.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project5.jpg" alt="project-img">
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="projects-single.html">Kalas Metrorail</a>
-                      </h3>
-                      <p class="project-cat">Infrastructure</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups="[&quot;residential&quot;]">
-                <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/project6.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/project6.jpg" alt="project-img">
-                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                  </a>
-                  <div class="project-item-info">
-                    <div class="project-item-info-content">
-                      <h3 class="project-item-title">
-                        <a href="projects-single.html">Ancraft Avenue House</a>
-                      </h3>
-                      <p class="project-cat">Residential</p>
                     </div>
                   </div>
                 </div>
@@ -559,7 +424,7 @@
           </div>
           <div class="col-12">
             <div class="general-btn text-center">
-              <a class="btn btn-primary" href="projects.html">View All Projects</a>
+              <a class="btn btn-primary" href="projects.html">Bütün Projelerimiz</a>
             </div>
           </div>
         </div>
