--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">İ.A. Müstakil Konut Projesi</a>
+                        <a href="content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html">İ.A. Müstakil Konut Projesi</a>
                       </h3>
                     </div>
                   </div>
