--- a/content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html
+++ b/content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html
@@ -51,8 +51,8 @@
           <div class="logo-area">
             <div class="row align-items-center">
               <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
-                <a class="d-block" href="index.html">
-                  <img loading="lazy" src="images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
+                <a class="d-block" href="../../index.html">
+                  <img loading="lazy" src="../../images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
                 </a>
               </div>
               <div class="col-lg-9 header-right">
@@ -75,7 +75,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
+                    <a class="btn btn-primary" href="../../contact.html">Fiyat Teklifi Alın</a>
                   </li>
                 </ul>
               </div>
@@ -95,19 +95,19 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a href="index.html" class="nav-link active">Anasayfa</a>
+                    <li class="nav-item">
+                      <a href="../../index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item">
-                      <a href="about.html" class="nav-link">Hakkımızda</a>
+                      <a href="../../about.html" class="nav-link">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
-                      <a href="team.html" class="nav-link">Ekibimiz</a>
+                      <a href="../../team.html" class="nav-link">Ekibimiz</a>
                     </li>
                     <li class="nav-item">
-                      <a href="projects.html" class="nav-link">Projelerimiz</a>
+                      <a href="../../projects.html" class="nav-link">Projelerimiz</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
@@ -191,7 +191,7 @@
           <div class="row justify-content-between">
             <div class="col-lg-12 col-md-6 footer-widget footer-about">
               <h3 class="widget-title">Hakkımızda</h3>
-              <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
+              <img loading="lazy" width="200px" class="footer-logo" src="../../images/mecra-logo-beyaz.png"
                 alt="Mecra Proje Logo">
               <p>Mecra Proje Ofisi 2021 yılında mimar ve mühendisler tarafından kurulmuş olup aktif olarak hizmet
                 vermeye devam etmektedir.</p>
@@ -226,8 +226,8 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="about.html">Hakkımızda</a></li>
-                  <li><a href="team.html">Ekibimiz</a></li>
+                  <li><a href="../../about.html">Hakkımızda</a></li>
+                  <li><a href="../../team.html">Ekibimiz</a></li>
                 </ul>
               </div>
             </div>
