--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">H.A. Mustakil Ev Projesi</a>
+                        <a href="content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html">H.A. Mustakil Ev Projesi</a>
                       </h3>
                     </div>
                   </div>
