--- a/index.html
+++ b/index.html
@@ -392,14 +392,14 @@
               </div>
               <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-3.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-3.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/cayirbagi-villa/cayirbagi-ultra-luks-villa-projesi-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/cayirbagi-villa/cayirbagi-ultra-luks-villa-projesi-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">M.B. Bağevi Projesi</a>
+                        <a href="content/projects/cayirbagi-ultra-luks-villa-projesi.html">Çayırbağı Ultra Lüks Villa Projesi</a>
                       </h3>
                     </div>
                   </div>
