--- a/index.html
+++ b/index.html
@@ -420,6 +420,21 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-4 col-sm-6 shuffle-item"">
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-1.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/bayram-bag-evi/bayram-bagevi-tasarim-mecra-proje-1.jpg" alt="project-img">
+                    <span class="gallery-icon"><i class="fa fa-plus"></i></span>
+                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a href="content/projects/bayram-bag-evi-projesi.html">M.A. Bağ Evi Projesi</a>
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-12">
