--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@
               </div>
               <div class="col-lg-4 col-sm-6 shuffle-item"">
                 <div class="project-img-container">
-                  <a class="gallery-popup" href="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-4.jpg" aria-label="project-img">
-                    <img class="img-fluid" src="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-4.jpg" alt="project-img">
+                  <a class="gallery-popup" href="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-2.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-2.jpg" alt="project-img">
                     <span class="gallery-icon"><i class="fa fa-plus"></i></span>
                   </a>
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a href="projects-single.html">Mikronet Karbon İç Mekan Tasarımı Projesi</a>
+                        <a href="content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html">Mikronet Karbon İç Mekan Tasarımı Projesi</a>
                       </h3>
                     </div>
                   </div>
