--- a/index.html
+++ b/index.html
@@ -117,51 +117,42 @@
       </div>
     </header>
     <div class="banner-carousel banner-carousel-1 mb-0">
-      <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg1.jpg)">
+      <div class="banner-carousel-item" style="background-image:url(images/projects/altinekin-katli-evler/altinekin-evler-tasarim-mecra-proje-6.jpg)">
         <div class="slider-content">
           <div class="container h-100">
             <div class="row align-items-center h-100">
               <div class="col-md-12 text-center">
-                <h2 class="slide-title" data-animation-in="slideInLeft">17 Years of excellence in</h2>
-                <h3 class="slide-sub-title" data-animation-in="slideInRight">Construction Industry</h3>
+                <h3 class="slide-sub-title" data-animation-in="slideInRight">Altınekin Güvercinlik Yazlık Konut Projesi</h3>
                 <p data-animation-in="slideInLeft" data-duration-in="1.2">
-                  <a href="services.html" class="slider btn btn-primary">Our Services</a>
-                  <a href="contact.html" class="slider btn btn-primary border">Contact Now</a>
+                  <a href="content/projects/altinekin-guvercinlik-yazlik-konut-projesi.html" class="slider btn btn-primary">İncele</a>
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg2.jpg)">
+      <div class="banner-carousel-item" style="background-image:url(images/projects/altinekin-mustakil-evler/altinekin-evler-tasarim-mecra-proje-2.jpg)">
         <div class="slider-content text-left">
           <div class="container h-100">
             <div class="row align-items-center h-100">
               <div class="col-md-12">
-                <h2 class="slide-title-box" data-animation-in="slideInDown">World Class Service</h2>
-                <h3 class="slide-title" data-animation-in="fadeIn">When Service Matters</h3>
-                <h3 class="slide-sub-title" data-animation-in="slideInLeft">Your Choice is Simple</h3>
+                <h3 class="slide-sub-title" data-animation-in="slideInLeft">Altınekin Güvercinlik Müstakil Ev Projesi</h3>
                 <p data-animation-in="slideInRight">
-                  <a href="services.html" class="slider btn btn-primary border">Our Services</a>
+                  <a href="content/projects/altinekin-guvercinlik-mustakil-ev-projesi.html" class="slider btn btn-primary border">İncele</a>
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="banner-carousel-item" style="background-image:url(images/slider-main/bg3.jpg)">
+      <div class="banner-carousel-item" style="background-image:url(images/projects/mikronet-karbon/mikronet-karbon-ic-mekan-tasarim-mecra-proje-1.jpg)">
         <div class="slider-content text-right">
           <div class="container h-100">
             <div class="row align-items-center h-100">
               <div class="col-md-12">
-                <h2 class="slide-title" data-animation-in="slideInDown">Meet Our Engineers</h2>
-                <h3 class="slide-sub-title" data-animation-in="fadeIn">We believe sustainability</h3>
-                <p class="slider-description lead" data-animation-in="slideInRight">We will deal with your failure that
-                  determines how you achieve success.</p>
+                <h3 class="slide-sub-title" data-animation-in="fadeIn">Mikronet Karbon İç Mekan Tasarım Projesi</h3>
                 <div data-animation-in="slideInLeft">
-                  <a href="contact.html" class="slider btn btn-primary" aria-label="contact-with-us">Get Free Quote</a>
-                  <a href="about.html" class="slider btn btn-primary border" aria-label="learn-more-about-us">Learn
-                    more</a>
+                  <a href="content/projects/mikronet-karbon-ic-mekan-tasarim-projesi.html" class="slider btn btn-primary border" aria-label="learn-more-about-us">İncele</a>
                 </div>
               </div>
             </div>
@@ -181,167 +172,6 @@
             <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
               <div class="call-to-action-btn">
                 <a class="btn btn-dark" href="https://wa.me/905078913738" target="_blank">Fiyat Teklifi Al</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="ts-features" class="ts-features">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="ts-intro">
-              <h2 class="into-title">About Us</h2>
-              <h3 class="into-sub-title">We deliver landmark projects</h3>
-              <p>We are rethoric question ran over her cheek When she reached the first hills of the Italic Mountains,
-                she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village
-                and the subline of her own road, the Line Lane.</p>
-            </div>
-            <div class="gap-20"></div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="ts-service-box">
-                  <span class="ts-service-icon">
-                    <i class="fas fa-trophy"></i>
-                  </span>
-                  <div class="ts-service-box-content">
-                    <h3 class="service-box-title">We've Repution for Excellence</h3>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="ts-service-box">
-                  <span class="ts-service-icon">
-                    <i class="fas fa-sliders-h"></i>
-                  </span>
-                  <div class="ts-service-box-content">
-                    <h3 class="service-box-title">We Build Partnerships</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="ts-service-box">
-                  <span class="ts-service-icon">
-                    <i class="fas fa-thumbs-up"></i>
-                  </span>
-                  <div class="ts-service-box-content">
-                    <h3 class="service-box-title">Guided by Commitment</h3>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="ts-service-box">
-                  <span class="ts-service-icon">
-                    <i class="fas fa-users"></i>
-                  </span>
-                  <div class="ts-service-box-content">
-                    <h3 class="service-box-title">A Team of Professionals</h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 mt-4 mt-lg-0">
-            <h3 class="into-sub-title">Our Values</h3>
-            <p>Minim Austin 3 wolf moon scenester aesthetic, umami odio pariatur bitters. Pop-up occaecat taxidermy
-              street art, tattooed beard literally.</p>
-            <div class="accordion accordion-group" id="our-values-accordion">
-              <div class="card">
-                <div class="card-header p-0 bg-transparent" id="headingOne">
-                  <h2 class="mb-0">
-                    <button class="btn btn-block text-left" type="button" data-toggle="collapse"
-                      data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Safety
-                    </button>
-                  </h2>
-                </div>
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                  data-parent="#our-values-accordion">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                    wolf moon officia aute, non cupidata
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header p-0 bg-transparent" id="headingTwo">
-                  <h2 class="mb-0">
-                    <button class="btn btn-block text-left collapsed" type="button" data-toggle="collapse"
-                      data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Customer Service
-                    </button>
-                  </h2>
-                </div>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#our-values-accordion">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                    wolf moon officia aute, non cupidata
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="card-header p-0 bg-transparent" id="headingThree">
-                  <h2 class="mb-0">
-                    <button class="btn btn-block text-left collapsed" type="button" data-toggle="collapse"
-                      data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Integrity
-                    </button>
-                  </h2>
-                </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                  data-parent="#our-values-accordion">
-                  <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                    wolf moon officia aute, non cupidata
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="facts" class="facts-area dark-bg">
-      <div class="container">
-        <div class="facts-wrapper">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 ts-facts">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact1.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="25">0</span></h2>
-                <h3 class="ts-facts-title">Adet Proje</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-sm-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact2.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="5">0</span></h2>
-                <h3 class="ts-facts-title">Profesyonel Ekip</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact3.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="25">0</span></h2>
-                <h3 class="ts-facts-title">Çözüm Ortağı</h3>
-              </div>
-            </div>
-            <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-md-0">
-              <div class="ts-facts-img">
-                <img loading="lazy" src="images/icon-image/fact4.png" alt="facts-img">
-              </div>
-              <div class="ts-facts-content">
-                <h2 class="ts-facts-num"><span class="counterUp" data-count="11">0</span></h2>
-                <h3 class="ts-facts-title">Ülkeye Hizmet</h3>
               </div>
             </div>
           </div>
